homeworks/yevgeniykos/module-04/lesson-13/clusters/course-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app-deploy
  namespace: mod04-less13
  labels:
    app: course-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 20%
      maxSurge: 30%  
  selector:
    matchLabels:
      app: course-app
  template:
    metadata:
      labels:
        app: course-app
    spec:
      containers:
        - name: course-app
          image: rdlsolutions/course-app:2.0.0
          resources:
            requests:
              cpu: "100m"  
              memory: "64Mi" 
            limits:
              cpu: "200m"  
              memory: "512Mi" 
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
