homeworks/yevgeniykos/module-04/lesson-13/clusters/course-app/base/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mod04-less13
  name: course-app-ingress
spec:
  rules:
  - host: "course-app.local" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: course-app-svc
            port:
              number: 80
